# tic-tac-toe

./: CMakeLists.txt
game/include/: game.h
game/source/: game.c
main/: main.c
